hopefully display the correct number of divs

--- a/New York Times.html
+++ b/New York Times.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="well">
-                        <i class="fa fa-square fa-2x" aria-hidden="true"></i><em><h2 id="headline">Title</h2></em>
+                        <i class="fa fa-square fa-2x" id="prettyBox" aria-hidden="true"></i><em><h2 id="headline">Title</h2></em>
                         <h3 id="author">Author</h3>
                         <h4 id="snippet">Section</h4>
                         <h4 id="date">Date</h4>
